# ibkr-bot

./: README.md
ibkr bot/: README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.ps1
ibkr bot/docs/safety/: CRITICAL_WARNINGS.md
ibkr bot/ibkr_platform/: __init__.py
ibkr bot/ibkr_platform/connectors/: __init__.py
ibkr bot/ibkr_platform/core/: config.py  exceptions.py  types.py
ibkr bot/ibkr_platform/observability/: logging.py  metrics.py
ibkr bot/monitoring/prometheus/: prometheus.yml
ibkr bot/scripts/: init_db.sql
ibkr bot/test_reports/: test_report.csv  test_report.html  test_report.json
ibkr bot/tests/: __init__.py  run_ibkr_tests.py
ibkr bot/tests/ibkr/: __init__.py  conftest.py  test_account.py  test_connection.py  test_errors.py  test_market_data.py  test_orders.py
